integration to server - create piffle and open in pdf viewer

--- a/TimeReg/app/src/main/res/menu/menu_main.xml
+++ b/TimeReg/app/src/main/res/menu/menu_main.xml
@@ -4,19 +4,25 @@
     tools:context="timereg.roninit.dk.timereg.MainActivity">
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="80"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_test_notification"
-        android:orderInCategory="90"
+        android:orderInCategory="100"
         android:title="Test notification"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_submit"
-        android:orderInCategory="95"
+        android:orderInCategory="96"
         android:title="@string/submit"
-        app:showAsAction="always" />
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_preview"
+        android:orderInCategory="95"
+        android:title="@string/action_preview"
+        app:showAsAction="never" />
 </menu>
