--- a/TimeReg/app/src/main/res/layout/fragment_main.xml
+++ b/TimeReg/app/src/main/res/layout/fragment_main.xml
@@ -73,6 +73,33 @@
                 android:textSize="20sp"
                 android:text="7.0 timer"
                 android:paddingRight="@dimen/activity_horizontal_margin"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:layout_weight="1"
+                android:textSize="20sp"
+                android:text="Status"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                />
+
+            <TextView
+                android:id="@+id/submitStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:layout_weight="1"
+                android:textSize="20sp"
+                android:text="Ikke godkendt"
+                android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 />
         </LinearLayout>
