overview page added

--- a/TimeReg/app/src/main/res/menu/menu_main.xml
+++ b/TimeReg/app/src/main/res/menu/menu_main.xml
@@ -25,4 +25,11 @@
         android:orderInCategory="95"
         android:title="@string/action_preview"
         app:showAsAction="never" />
+
+
+    <item
+        android:id="@+id/action_overview"
+        android:orderInCategory="95"
+        android:title="@string/overview"
+        app:showAsAction="never" />
 </menu>
