--- a/TimeReg/app/src/main/res/layout/fragment_main.xml
+++ b/TimeReg/app/src/main/res/layout/fragment_main.xml
@@ -49,62 +49,9 @@
         </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:layout_weight="1"
-                android:textSize="20sp"
-                android:text="@string/tab_time_periode_total"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                />
 
-            <TextView
-                android:id="@+id/week_total_hours"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:layout_weight="1"
-                android:textSize="20sp"
-                android:text="7.0 timer"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:layout_weight="1"
-                android:textSize="20sp"
-                android:text="Status"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                />
-
-            <TextView
-                android:id="@+id/submitStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:layout_weight="1"
-                android:textSize="20sp"
-                android:text="Ikke godkendt"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                />
-        </LinearLayout>
-
-        <TextView
+        <!-- TextView
             android:id="@+id/textView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -116,7 +63,7 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/appbar_padding_top"
-            />
+            /-->
 
         <ScrollView
             android:layout_width="fill_parent"
