--- a/TimeReg/app/src/main/res/menu/menu_overview.xml
+++ b/TimeReg/app/src/main/res/menu/menu_overview.xml
@@ -6,6 +6,12 @@
         android:id="@+id/action_ow_submit"
         android:orderInCategory="100"
         android:title="@string/action_submit"
-        app:showAsAction="always|withText"
+        app:showAsAction="never"
         />
+
+    <item
+        android:id="@+id/action_preview"
+        android:orderInCategory="95"
+        android:title="@string/action_preview"
+        app:showAsAction="never" />
 </menu>
