--- a/TimeReg/app/src/main/res/layout/fragment_overview.xml
+++ b/TimeReg/app/src/main/res/layout/fragment_overview.xml
@@ -108,12 +108,12 @@
                 <!-- second column -->
                 <TextView
                     android:id="@+id/lastExpensesTableAmount"
-                    android:text="Opgave nr"
+                    android:text="Virksomhed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/taskName"
-                    android:text="Opgave navn"
+                    android:text="Opgave nr. og navn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
