--- a/TimeReg/app/src/main/res/layout/fragment_overview.xml
+++ b/TimeReg/app/src/main/res/layout/fragment_overview.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linearMain"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -84,14 +85,23 @@
             />
     </LinearLayout>
 
-
     <ScrollView
+        android:id="@+id/ow_scrollview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:fillViewport="true" >
 
-        <TableLayout
+        <LinearLayout
+            android:id="@+id/ow_sw_linearlayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        </LinearLayout>
+
+
+        <!--TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/lastExpensesTable">
@@ -99,13 +109,13 @@
                 android:id="@+id/lastExpensesTableRow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-                <!-- first column -->
+
                 <TextView
                     android:id="@+id/lastExpensesTableName"
                     android:text="Dato"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-                <!-- second column -->
+
                 <TextView
                     android:id="@+id/lastExpensesTableAmount"
                     android:text="Virksomhed"
@@ -122,13 +132,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
-                <!-- TextView
-                    android:id="@+id/table_row_description"
-                    android:text="Beskrivelse"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/ -->
+
             </TableRow>
-        </TableLayout>
+        </TableLayout -->
 
     </ScrollView>
 
