--- a/TimeReg/app/src/main/res/layout/fragment_overview.xml
+++ b/TimeReg/app/src/main/res/layout/fragment_overview.xml
@@ -30,12 +30,21 @@
         android:paddingTop="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"/>
 
+    <Spinner
+        android:id="@+id/spinner3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="40sp"
+        android:paddingTop="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"/>
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/ow_week_total_hours_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="start"
@@ -58,6 +67,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ovierview_ll_status"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -99,44 +109,5 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
         </LinearLayout>
-
-
-        <!--TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/lastExpensesTable">
-            <TableRow
-                android:id="@+id/lastExpensesTableRow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/lastExpensesTableName"
-                    android:text="Dato"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:id="@+id/lastExpensesTableAmount"
-                    android:text="Virksomhed"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:id="@+id/taskName"
-                    android:text="Opgave nr. og navn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:id="@+id/table_row_hours"
-                    android:text="Timer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-
-            </TableRow>
-        </TableLayout -->
-
     </ScrollView>
-
-
 </LinearLayout>
